argocd/infra/storage/longhorn/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Longhorn
    gethomepage.dev/icon: longhorn
    gethomepage.dev/description: "Longhorn delivers simplified, easy to deploy and upgrade, 100% open source, cloud-native persistent block storage without the cost overhead."
    gethomepage.dev/pod-selector: app.kubernetes.io/name=longhorn
  labels:
    app.kubernetes.io/instance: longhorn-app
  name: longhorn-httproute
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
  - longhorn.yanello.net
  rules:
  - backendRefs:
    - name: longhorn-frontend
      namespace: longhorn
      port: 80
